--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,10 +32,10 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: 🔬 Lint
-        run: pnpm run lint:strict
+        run: pnpm run lint
 
       - name: 🔎 Type check
-        run: pnpm run typecheck
+        run: pnpm run tsc
 
       - name: 💅 Prettier check
         run: pnpm run format:check
