--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-toast": "^1.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.438.0",
     "next": "^14.2.23",
     "react": "^18.2.0",
