--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.5",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.438.0",
     "next": "^14.2.23",
@@ -29,6 +30,7 @@
     "react-icons": "^5.4.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "zod": "^3.24.1"
   },
