--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && pnpm format",
-    "tsc": "tsc --noEmit --incremental false",
+    "tsc": "tsc --noEmit --incremental false --skipLibCheck",
     "format": "prettier -w .",
     "format:check": "prettier -c .",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
     "prepare": "husky install"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@leenguyen/react-flip-clock-countdown": "^1.7.1",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -30,14 +31,16 @@
     "next": "^14.2.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.60.0",
     "react-icons": "^5.4.0",
     "react-responsive": "^10.0.1",
+    "resend": "^4.7.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "voothanh-react-countdown-flip": "^0.0.3",
-    "zod": "^3.24.1"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.3.0",
@@ -66,7 +69,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.5.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "^4.9.5"
+    "typescript": "^5.8.2"
   },
   "husky": {
     "hooks": {
