--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "types": [],
+    
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
