--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@leenguyen/react-flip-clock-countdown": "^1.7.1",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -30,14 +31,16 @@
     "next": "^14.2.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.60.0",
     "react-icons": "^5.4.0",
     "react-responsive": "^10.0.1",
+    "resend": "^4.7.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "voothanh-react-countdown-flip": "^0.0.3",
-    "zod": "^3.24.1"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.3.0",
@@ -46,6 +49,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@testing-library/react": "^15.0.7",
     "@types/node": "24.0.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.18",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
@@ -62,6 +66,7 @@
     "lint-staged": "^12.5.0",
     "next-router-mock": "^0.9.0",
     "next-sitemap": "^2.5.28",
+    "nodemailer": "^7.0.5",
     "postcss": "^8.5.1",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.5.0",
