--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.438.0",
     "next": "^14.2.23",
+    "next-intl": "^4.3.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.60.0",
